# aico

./: .gitignore  ARCHITECTURE.md  CONVENTIONS.md  Cargo.toml  DESIGN_RATIONALE.md  EXAMPLE_WORKFLOWS.md  LICENSE  README.md  USAGE.feature.md  aico.py  build.rs  flake.nix  mise.toml  pyproject.toml  rust-toolchain.toml
.aico/: addons
.aico/addons/: commit  manage-context  refine  summarize  summarizev2
.cargo/: config.toml
.github/workflows/: build.yml
docs/: addon_commit.md  addon_refine.md  guide_branching.md  guide_creating_addons.md  guide_history.md  tutorial_basics.md
script/: build  lint  setup  test
src/: addons.rs  console.rs  consts.rs  exceptions.rs  fs.rs  lib.rs  main.rs  model_registry.rs  models.rs  session.rs  trust.rs  utils.rs
src/aico/: addons.py  aico_live_render.py  atomic_io.py  console.py  consts.py  diffing.py  exceptions.py  fs.py  history.py  history_utils.py  index_logic.py  main.py  model_registry.py  models.py  prompts.py  serialization.py  session.py  session_context.py  session_data_adapter.py  session_find.py  session_loader.py  session_persistence.py  tokens.py  trust.py  utils.py
src/aico/bundled_addons/: commit  manage-context  refine  summarize
src/aico/commands/: add.py  context.py  drop.py  dump_context.py  dump_history.py  edit.py  history.py  history_plumbing.py  init.py  last.py  log.py  migrate_shared_history.py  prompt.py  redo.py  session_fork.py  session_list.py  session_new.py  session_switch.py  set_history.py  status.py  tokens.py  trust.py  undo.py
src/aico/core/: files.py  llm_executor.py  prompt_helpers.py  provider_router.py  session_context.py  session_loader.py  session_persistence.py  tokens.py  trust.py
src/aico/core/providers/: base.py  openai.py  openrouter.py  utils.py
src/aico/diffing/: diff_utils.py  patching.py  stream_processor.py
src/aico/historystore/: __init__.py  history_store.py  migration.py  models.py  pointer.py  reconstruct.py  session_view.py
src/aico/lib/: diffing.py  history_utils.py  model_info.py  models.py  patching.py  session.py  session_data_adapter.py  session_find.py  stream_processor.py  ui.py
src/aico/llm/: executor.py  prompt_helpers.py  router.py  tokens.py
src/aico/llm/providers/: base.py  openai.py  openrouter.py  utils.py
src/commands/: add.rs  ask.rs  drop.rs  dump_history.rs  edit.rs  generate.rs  history_cmds.rs  history_plumbing.rs  init.rs  last.rs  llm_shared.rs  log.rs  mod.rs  session_cmds.rs  session_fork.rs  status.rs  trust.rs
src/diffing/: diff_utils.rs  mod.rs  parser.rs  patching.rs
src/historystore/: mod.rs  models.rs  reconstruct.rs  store.rs
src/llm/: api_models.rs  client.rs  executor.rs  mod.rs  tokens.rs
src/ui/: live_display.rs  markdown_streamer.rs  mod.rs
tests/: common.rs  conftest.py  helpers.py  mocks.py  run_doc_tests.sh  run_functional_tests.sh  test_addons.py  test_addons.rs  test_chronology.py  test_chronology.rs  test_classify_line.rs  test_cli_prompt.rs  test_command_context.py  test_command_context.rs  test_command_dump_context.py  test_command_dump_history.rs  test_command_edit.py  test_command_edit.rs  test_command_gen.rs  test_command_history.py  test_command_history_plumbing.py  test_command_init.py  test_command_init.rs  test_command_last.py  test_command_last.rs  test_command_log.py  test_command_log.rs  test_command_prompt.py  test_command_prompt_logic.rs  test_command_prompt_piping.py  test_command_prompt_piping.rs  test_command_prompt_streaming.py  test_command_redo.py  test_command_redo.rs  test_command_session.rs  test_command_session_fork.py  test_command_session_fork.rs  test_command_session_list.py  test_command_session_list.rs  test_command_session_new.py  (+61 more)
tests/features/: addon_refine.md  basic_setup.md  branching.md  conftest.py  test_features.py
tests/support/: aico_shim.sh  mock_llm.py
tests/support/mock_server/: Cargo.toml
tests/support/mock_server/src/: main.rs
