[project]
name = "aico"
version = "0.1.0"
description = "A command-line tool for scripting AI-driven code edits."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "openai>=2.8.1",
    "pydantic>=2.12.4",
    "regex>=2025.11.3",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
aico = "aico.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aico"]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "pytest>=9.0.1",
    "pytest-bdd>=8.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.6",
]

[tool.ruff]
exclude = [ ".venv", "build", "dist" ]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.uv]
override-dependencies = ["gherkin-official>=33.0.0"]
