[project]
name = "aico"
version = "0.1.0"
description = "A command-line tool for scripting AI-driven code edits."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "msgspec>=0.20.0",
    "openai>=2.8.1",
    "regex>=2025.11.3",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
aico = "aico.main:app"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = ["bundled_addons/**"]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "pytest>=9.0.1",
    "pytest-bdd>=8.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.6",
    "ty>=0.0.2",
]

[tool.ruff]
exclude = [ ".venv", "build", "dist" ]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.uv]
override-dependencies = ["gherkin-official>=33.0.0"]
