[project]
name = "aico"
version = "0.1.0"
description = "A CLI utility that gives you precise, scriptable control over LLMs to generate code as unified diffs and manage conversation history."
keywords = ["ai", "llm", "cli", "diff", "patch", "scripting"]
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{name = "Jurriaan Pruis"}]
license = {text = "MIT"}
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.28.1",
    "msgspec>=0.20.0",
    "openai>=2.8.1",
    "regex>=2025.11.3",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
aico = "aico.main:app"

[project.urls]
Repository = "https://github.com/jurriaan/aico"
Issues = "https://github.com/jurriaan/aico/issues"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = ["bundled_addons/**"]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.6",
    "ty>=0.0.2",
]

[tool.ruff]
exclude = [ ".venv", "build", "dist" ]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
